--- a/IosAdjustView/app/src/main/res/values/strings.xml
+++ b/IosAdjustView/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">AudioAdjustView</string>
+    <string name="app_name">IosAdjustView</string>
 
 </resources>
